# py-etatouch-restful

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/etatouch_restful/: __init__.py  client.py  discovery.py  exceptions.py  models.py  parser.py
tests/: test_client.py  test_discovery.py  test_parser.py
