[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-etatouch-restful"
version = "0.1.0"
description = "Async Python client for ETA Touch RESTful Webservices"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "ETA Touch Integration Contributors" }]
dependencies = [
  "aiohttp>=3.9.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/etatouch_restful"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

