[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-etatouch-restful"
version = "0.2.0"
description = "Async Python client for ETA Touch RESTful Webservices"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "ETA Touch Integration Contributors" }]
keywords = ["eta", "etatouch", "home-assistant", "heating", "rest", "xml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
  "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/Lechtob/py-etatouch-restful"
Repository = "https://github.com/Lechtob/py-etatouch-restful"
Issues = "https://github.com/Lechtob/py-etatouch-restful/issues"
Changelog = "https://github.com/Lechtob/py-etatouch-restful/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]
build = [
  "build>=1.2",
  "hatchling>=1.25",
  "twine>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/etatouch_restful"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
